# PeopleXM

./: hello.py  pyproject.toml
flask_mongodb_project/: .gitignore  pyproject.toml
flask_mongodb_project/app/: app.py  requirements.txt
flask_mongodb_project/app/templates/: index.html  show.html  update_user.html
