[tool.poetry]
name = "peoplexm"
version = "0.1.0"
description = "PeopleXM Flask MongoDB App"
authors = ["Nitish Kumar"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
flask = "^2.3.3"
pymongo = "^4.15.5"
python-dotenv = "^1.2.1"
dnspython = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
