[tool.poetry]
name = "PeopleXM"
version = "0.1.0"
description = "A web app project for PeopleXM"
authors = ["Nitish Kumar <your-email@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.13"
flask = "^2.3.2"
pymongo = "^4.3.3"
python-dotenv = "^1.0.0"
dnspython = "^2.4.3"  # for MongoDB DNS connection support

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
